devops/kubernetes/openair-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openair-sensor-server-deploy
  namespace: openair
  labels:
    app: openair-sensor-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openair-sensor-server
  template:
    metadata:
      labels:
        app: openair-sensor-server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: openair-sensor-server
          image: ghcr.io/stuck-in-a-loop/openairsensor-server:latest
          resources: {}
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: openair-sensor-server-svc
  namespace: openair
  labels:
    app: openair-sensor-server
spec:
  selector:
    app: openair-sensor-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: openair-sensor-server-vs
  namespace: istio-services
spec:
  hosts:
    - openair.stuckinaloop.ro
  gateways:
    - stuckinaloop-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: openair-sensor-server-svc.openair.svc.cluster.local
            port:
              number: 3000
